@@ -547,8 +547,10 @@ print_slot_shares(struct queueInfoEnt *qp)
            qp->numFairSlots - numRUN);
 
     printf("\
-%9s   %6s   %8s   %6s   %6s   %6s\n",
-           "USER/GROUP", "SHARES", "PRIORITY", "PEND", "RUN", "STARTED");
+%9s  %6s  %8s  %6s  %6s  %6s  %6s  %6s\n",
+           "USER/GROUP", "SHARES", "PRIORITY", "PEND", "RUN",
+           "USUSP", "SSUSP", "STARTED");
+
     for (i = 0; i < qp->numAccts; i++) {
         char buf[MAXLSFNAMELEN];
 
@@ -557,13 +559,15 @@ print_slot_shares(struct queueInfoEnt *qp)
         else
             sprintf(buf, "%s", qp->saccts[i]->name);
 
-        printf("%-9s   %6d    %8.3f",
+        printf("%-9s  %6d   %8.3f",
                buf,
                qp->saccts[i]->shares,
                qp->saccts[i]->dshares);
-        printf("   %6d   %6d   %6d\n",
+        printf("  %6d  %6d  %6d  %6d  %6d\n",
                qp->saccts[i]->numPEND,
                qp->saccts[i]->numRUN,
+               qp->saccts[i]->numUSUSP,
+               qp->saccts[i]->numSSUSP,
                qp->saccts[i]->numRAN);
     }
 }
